# review_clusterer

./: .gitignore  CLAUDE.md  CLAUDE_CHECKLIST.md  pyproject.toml
ai_docs/prompts/: analyze_review.md  post_cluster.md  summarize_for_refinement.md
ai_docs/specs/: implementation_details.md  overview.md
prompts/: initial.md
scripts/: example_cli_calls.txt  interactive_chroma.py
src/review_clusterer/: __init__.py  __main__.py  cli.py  main.py
src/review_clusterer/controllers/: cluster_controller.py  csv_controller.py  index_controller.py  llm_controller.py  search_controller.py
src/review_clusterer/framework/: chroma_repository.py  clusterer.py  csv_processor.py  embedder.py  llm_client.py  local_embedder.py  markdown_report.py  voyage_embedder.py
src/review_clusterer/processors/: csv_processor.py
